# DroidNCM

./: .travis.yml  build.gradle  droidncm.keystore
.github/workflows/: android.yml
gradle/wrapper/: gradle-wrapper.properties
ncm/: build.gradle
ncm/src/androidTest/java/io/bunnyblue/droidncm/: ExampleInstrumentedTest.java
ncm/src/main/: AndroidManifest.xml
ncm/src/main/cpp/: CMakeLists.txt
ncm/src/main/cpp/_ncm/: CMakeLists.txt  io_bunnyblue_droidncm_dump_NcmDumper.cpp  ncmcrypt.cpp  qcm.cpp  qcm.h
ncm/src/main/cpp/libtag/: CMakeLists.txt
ncm/src/main/java/io/bunnyblue/droidncm/: MainActivity.java  NCMApp.java
ncm/src/main/java/io/bunnyblue/droidncm/finder/: LocalFileFragment.java  MainFinderActivity.java  MyLocalFileRecyclerViewAdapter.java  SortTypeAdapter.java  SortTypeHelper.java  Utils.java
ncm/src/main/java/io/bunnyblue/droidncm/finder/dummy/: NCMFileContent.java
ncm/src/main/java/io/bunnyblue/droidncm/finder/task/: AboutFragment.java  FileConvertTask.java  NCMFileFinder.java  OneConvertTask.java
ncm/src/main/java/io/bunnyblue/droidncm/history/: NCMDatabaseHelper.java  NCMHistory.java  NCMHistoryDAO.java  NCMHistoryDB.java
ncm/src/main/java/io/bunnyblue/droidncm/utils/: DocumentsUtils.java
ncm/src/main/jni/_ncm/: io_bunnyblue_droidncm_dump_NcmDumper.cpp  ncmcrypt.cpp
ncm/src/main/res/layout/: app_bar_main_finder.xml  content_main_finder.xml  fragment_about.xml  fragment_localfile.xml  view_sort_type_item.xml
ncm/src/main/res/values/: dimens.xml  strings.xml
ncm/src/test/java/io/bunnyblue/droidncm/: ExampleUnitTest.java
